monticore-generator/src/test/resources/cocos/invalid/A2030/A2030a.mc4
package cocos.invalid.A2030;

grammar A2030a {

  A extends B;

}